Change ArrayLists to Arrays and code cleanup